[tool.poetry]
name = "polka"
version = "0.1.0"
description = "Модуль для доступа к API проекта «Полка» (https://polka.academy/)."
authors = ["dmkskn <dmksknn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pre-commit = "^1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
